# Q3_25_Builder_Deepesh_Singh_Rathore

./: .gitignore  README.md
Trustplay_Capstone_Project/: Anchor.toml  README.md
Trustplay_Capstone_Project/programs/joinroom/: Cargo.toml
Trustplay_Capstone_Project/programs/joinroom/src/: constants.rs  context.rs  error.rs  lib.rs
Trustplay_Capstone_Project/programs/joinroom/src/instructions/: join_room.rs  (+4 more)
Trustplay_Capstone_Project/tests/: joinroom.ts
airdrop/: airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts
airdrop/programs/: Turbin3_prereq.ts
amm/: Anchor.toml  package.json  readme.md
amm/programs/amm/src/: lib.rs
amm/programs/anchor-amm/: Cargo.toml
amm/programs/anchor-amm/src/: lib.rs
amm/tests/: anchor-amm.ts
convert/: convert.cjs  convert.ts  package.json
escrow-turbin3/: Anchor.toml
escrow-turbin3/programs/escrow-turbin3/: Cargo.toml
escrow-turbin3/programs/escrow-turbin3/src/: lib.rs
escrow-turbin3/tests/: escrow-turbin3.ts
rust/: Cargo.toml
rust/src/: lib.rs
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts
trustplay-v2/: Anchor.toml  README.md
trustplay-v2/programs/trustplay-v2/: Cargo.toml
trustplay-v2/programs/trustplay-v2/src/: error.rs  lib.rs
trustplay-v2/programs/trustplay-v2/src/instructions/: deposit.rs  distribute_prizes.rs  initialize.rs  join_room.rs  mod.rs
trustplay-v2/programs/trustplay-v2/src/state/: mod.rs  room.rs  vault_state.rs
trustplay-v2/tests/: trustplay-v2.ts
vault/: Anchor.toml
vault/programs/vault/src/: errors.rs  lib.rs
vault/tests/: vault.ts
(+17 files in other folders)
